<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/redter"
    tools:context=".ViewActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ViewSong"
        android:textColor="@color/redpri"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFilterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="-10dp"/>

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/redpri"
        android:text="@string/Popup" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="15dp"
            android:textSize="18dp"
            android:textColor="@color/white2"
            android:text="@string/Sort"/>

        <Spinner
            android:id="@+id/spSort"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:background="@color/white2"
            android:entries="@array/Sort" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lvSongs">
    </ListView>

</LinearLayout>