<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/redter"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/InsertSong"
                android:textColor="@color/redpri"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/inserttext"
                android:textAlignment="center"
                android:textColor="@color/white2"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvSongTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textColor="@color/redpri"
                android:textStyle="bold"
                android:text="@string/Song_Title" />

            <EditText
                android:id="@+id/etSongTitle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white2"
                android:textSize="22dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvSingers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textColor="@color/redpri"
                android:textStyle="bold"
                android:text="@string/Singers" />

            <EditText
                android:id="@+id/etSingers"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white2"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textColor="@color/redpri"
                android:textStyle="bold"
                android:text="@string/Year" />

            <EditText
                android:id="@+id/etYear"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white2"
                android:ems="10"
                android:inputType="number"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/tvStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textColor="@color/redpri"
                android:textStyle="bold"
                android:text="@string/Stars" />

            <RatingBar
                android:id="@+id/rtbStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:progressTint="@color/redpri"
                android:progressBackgroundTint="@color/white2"
                android:layout_weight="1"
                android:numStars="5"
                android:stepSize="1" />

            <Button
                android:id="@+id/btnInsert"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/redpri"
                android:textColor="@color/white2"
                android:textSize="16dp"
                android:text="@string/Insert" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ViewSong"
                android:textColor="@color/redpri"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white2"
                android:text="@string/viewsongpara"
                android:textAlignment="center"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvFilterTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textColor="@color/redpri"
                android:textStyle="bold"
                android:text="@string/Song_Title" />

            <EditText
                android:id="@+id/etFilterTitle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white2"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/tvFilterSingers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textColor="@color/redpri"
                android:textStyle="bold"
                android:text="@string/Singers" />

            <EditText
                android:id="@+id/etFilterSingers"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white2"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/tvFilterYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textColor="@color/redpri"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/Year" />

            <Spinner
                android:id="@+id/spFilterYear"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white2"
                android:layout_marginBottom="10dp"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/tvFilterStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textColor="@color/redpri"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/Stars" />

            <Spinner
                android:id="@+id/spRating"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white2"
                android:entries="@array/rating"
                android:layout_marginBottom="10dp"
                android:spinnerMode="dialog" />

            <Button
                android:id="@+id/btnShowList"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/redpri"
                android:text="@string/Show_List"
                android:textColor="@color/white2"
                android:textSize="16dp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>